# nre-platform

./: .gitignore  Makefile  README.md  cluster-state-backup.yaml  kind-config.yaml
services/lattice/: .dockerignore  .gitignore  Dockerfile  Dockerfile.mcp  LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt
services/lattice/.github/workflows/: ci.yml
services/lattice/examples/: bgp_diagnostics_cases.json  bgp_diagnostics_sample.md  bgp_diagnostics_smoke_test.py  bgp_diagnostics_validation.md  bgp_option_b_sample.md
services/lattice/internal/bgp/: anomaly_detector.py  anomaly_prioritizer.py  cross_device_correlation.py  history_query_demo.py  history_query_service.py  history_store.py  history_store_demo.py  mcp_execution_engine.py  mcp_history_query.py  mcp_history_query_capability.py  mcp_remediation_capability.py  mcp_risk_wrapper.py  models.py  prefix_verifier.py  remediation_planner.py  remediation_progression.py  remediation_scenarios_demo.py  remediation_service.py  remediation_to_intent.py  route_state_tracker.py  storage_models.py
services/lattice/internal/capability/: device_profile.py
services/lattice/internal/collector/: collector_runtime.py  device_subscription_plan.py  render_gnmic_yaml.py  (+5 more)
services/lattice/tests/: test_capacity.py  test_execution_mock.py  test_external_policy.py  test_graph.py  test_guard_risk_modes.py  test_inventory_store.py  test_planner.py  test_runner_static_sources.py
services/mcp_server/: .dockerignore  Dockerfile  main.py  mypy.ini  pyproject.toml  requirements.txt
services/mcp_server/docs/: mcp_boundary.md
(+220 files in other folders)
