[project]
name = "datacenter_orchestrator"
version = "0.1.0"
description = "Agentic AI CLOS fabric orchestration engine"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn"
]
[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E203"]

[tool.ruff.lint.isort]
known-first-party = ["datacenter_orchestrator"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
