[project]
name = "mcp_server"
version = "0.1.0"
description = "Standalone MCP execution and validation server"
requires-python = ">=3.11"
dependencies = [
  "requests==2.32.3",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
